# crypto-prison-bot-py

./: README.md  altcoinnews.html  altcoinnews.txt  bitcoinnews.html  bitcoinnews.txt  blockchainnews.html  blockchainnews.txt  coding.html  coding.txt  cryptodeals.html  cryptodeals.txt  definews.html  definews.txt  ethereumnews.html  ethereumnews.txt  hodlershub.txt  main.py  nftnews.html  nftnews.txt  nftnow.html  nftnow.txt  programming.html  pyproject.toml  run.sh  technology.html  technology.txt  tempCodeRunnerFile.py
Controllers/: crypto_news_controller.py  cryptonews_news_controller.py  hodlers_hub_controller.py  hodlers_hub_news_controller.py  it_news_controller.py  news_controller.py  nft_news_controller.py  wired_news_controller.py
Infrastructure/: News.py
Server/: keep_alive.py
