[tool.poetry]
name = "repl_python3_crypto-prison-bot-py"
version = "0.1.0"
description = ""
authors = ["Gunchar <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.1"
Jinja2 = "^3.1.1"
schedule = "^1.1.0"
youtube_dl = "^2021.12.17"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
